<resources>
    <string name="app_name">AppCinema</string>
    <string name="name">Nombre</string>
    <string name="capacity">Capacidad</string>
    <string name="rating">Puntuación</string>
    <string name="create">Crear</string>
    <string name="here">Aquí</string>
    <string name="modify">Modificar</string>
    <string name="delete">Eliminar</string>
    <string name="openingDate">Día de apertura</string>
    <string name="movies">Películas</string>
    <string name="item">Añadir</string>
    <string name="title">Titulo</string>
    <string name="director">Director</string>
    <string name="genre">Género</string>
    <string name="duration">Duración</string>
    <string name="cinemas">Cines</string>
    <string name="newName">Nuevo Nombre</string>
    <string name="newCapacity">Nueva Capacidad</string>
    <string name="newRating">Nueva Puntuación</string>
    <string name="mapboxAccessToken">sk.eyJ1IjoiZGFuaWZhbmxlZ2Fzb3Y4IiwiYSI6ImNscHNqdWdtdTA0a3Mya21sdHhtZjV5aTgifQ.y3aXBLWYah7sRdfz1wDJ8g</string>
    <string name="nameUpdate">"Nombre actual del cine: "</string>
    <string name="capacityUpdate">"Capacidad actual del cine: "</string>
    <string name="ratingUpdate">"Puntuación actual del cine: "</string>
    <string name="latitudeUpdate">"Latitud actual del cine: "</string>
    <string name="longitudeUpdate">"Longitud actual del cine: "</string>
    <string name="updateCinemaName">Nuevo nombre del cine</string>
    <string name="updateCinemaCapacity">Nueva capacidad del cine</string>
    <string name="updateCinemaRating">Nueva puntuación del cine</string>
    <string name="succedRegisterCinema">El cine se ha registrado correctamente</string>
    <string name="succedDeleteCinema">El cine ha sido eliminado correctamente</string>
    <string name="errorDeleteCinema">Error al eliminar el cine</string>
    <string name="errorRed">Error de red, verifica tu conexión</string>
    <string name="succed">Éxito</string>
    <string name="acept">Aceptar</string>
    <string name="error">Error</string>
    <string name="updateCinemaAtributes">Datos del cine actualizados correctamente</string>
    <string name="errorUpdateCinemaAtributes">Error al actualizar los datos del cine. Por favor, inténtalo de nuevo.</string>
    <string name="succedDeleteMovie">La película ha sido eliminada correctamente</string>
    <string name="errorDeleteMovie">Error al eliminar la película</string>
    <string name="updateMovieAtributes">Datos de la película actualizados correctamente</string>
    <string name="errorUpdateMovieAtributes">Error al actualizar los datos de la película</string>
    <string name="updatedMovieTitle">Nuevo titulo de la película</string>
    <string name="updatedMovieDirector">Nuevo director de la película</string>
    <string name="updatedMovieGenre">Nuevo género de la película</string>
    <string name="updatedMovieDuration">Nueva duración de la película</string>
    <string name="titleUpdate">"Título de la película actual: "</string>
    <string name="directorUpdate">"Director de la película actual: "</string>
    <string name="genreUpdate">"Género de la película actual: "</string>
    <string name="durationUpdate">"Duración de la película actual: "</string>
    <string name="favourite">Favorito</string>
    <string name="favoriteAdd">Favoritos</string>
    <string name="removeFromFavorite">Eliminar de favoritos</string>
    <string name="removeMovieFromFavorites">Película quitada de favoritos correctamente</string>
    <string name="addMovieToFavorites">Película añadida a favoritos correctamente</string>
    <string name="longitud_del_cine">Longitud del cine</string>
    <string name="nueva_latitud_del_cine">Nueva latitud del cine</string>
    <string name="latitud_del_cine">Latitud del cine</string>
    <string name="nueva_longitud_del_cine">Nueva longitud del cine</string>
    <string name="nameList">"Nombre: "</string>
    <string name="ratingList">"Puntuación: "</string>
    <string name="latitudeList">"Latitud: "</string>
    <string name="longitudeList">Longitud: </string>
    <string name="titleList">"Título: "</string>
    <string name="directorList">"Director: "</string>
    <string name="favoritesTitle">Tu lista de Favoritos</string>
    <string name="noDescription">Sin descripción</string>
    <string name="newDescription">Nueva descripción</string>
    <string name="actualDescription"> Descripción actual: </string>
    <string name="updateFavMovie">Descripción actualizada de la película</string>
    <string name="editDescription">Edita la descripción de la película</string>
</resources>