<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.CinemaDetailsView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
                android:id="@+id/modifyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/modifyCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/capacity"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/editTextNewRating"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/modifyRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rating"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/editTextNewName"
            tools:layout_editor_absoluteX="16dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btModify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp"
        android:backgroundTint="@color/black"
        android:textColor="#FFFFFF"
        android:onClick="modifyCinema"/>

</androidx.constraintlayout.widget.ConstraintLayout>