<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.UpdateMovieView">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/getTextViewMovieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextMovieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/getTextViewMovieTitle"
            android:layout_marginBottom="16dp"
            android:hint="@string/updatedMovieTitle" />

        <TextView
            android:id="@+id/getTextViewMovieDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextMovieTitle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextMovieDirector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/getTextViewMovieGenre"
            android:layout_marginBottom="16dp"
            android:hint="@string/updatedMovieDirector" />

        <TextView
            android:id="@+id/getTextViewMovieGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextMovieTitle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextMovieGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/getTextViewMovieGenre"
            android:layout_marginBottom="16dp"
            android:hint="@string/updatedMovieGenre" />

        <TextView
            android:id="@+id/getTextViewMovieDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextMovieTitle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextMovieDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/getTextViewMovieDuration"
            android:layout_marginBottom="16dp"
            android:hint="@string/updatedMovieDuration" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:onClick="goBackToListMovies"
            android:src="@drawable/atras"
            app:backgroundTint="#2ECF12"
            app:layout_constraintBottom_toTopOf="@+id/bt_Update_Movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/bt_Update_Movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/black"
            android:onClick="updateMovie"
            android:text="@string/modify"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>